[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/station/shipyard/ShipClassDetails.gd" type="Script" id=1]
[ext_resource path="res://scenes/station/shipyard/ShipDisplay.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/station/shipyard/LabeledField.tscn" type="PackedScene" id=3]

[node name="ShipClassDetails" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShipDisplay" parent="." instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 400.0
margin_bottom = 400.0

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Make" parent="VBoxContainer" instance=ExtResource( 3 )]
margin_right = 77.0
margin_bottom = 14.0
field_name = "Make"

[node name="Model" parent="VBoxContainer" instance=ExtResource( 3 )]
margin_top = 18.0
margin_right = 77.0
margin_bottom = 32.0
field_name = "Model"

[node name="MainThrust" parent="VBoxContainer" instance=ExtResource( 3 )]
margin_top = 36.0
margin_right = 77.0
margin_bottom = 50.0
field_name = "Main Thrust"

[node name="ManuThrust" parent="VBoxContainer" instance=ExtResource( 3 )]
margin_top = 54.0
margin_right = 77.0
margin_bottom = 68.0
field_name = "Manuvering Thrust"

[node name="RotationPower" parent="VBoxContainer" instance=ExtResource( 3 )]
margin_top = 72.0
margin_right = 77.0
margin_bottom = 86.0
field_name = "Rotation Speed"

[node name="HoldSize" parent="VBoxContainer" instance=ExtResource( 3 )]
margin_top = 90.0
margin_right = 77.0
margin_bottom = 104.0
field_name = "Hold Size"
